<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="97dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="489dp"
       android:src="@drawable/splash_screen1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="281dp"
        android:layout_below="@id/name"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="327dp"
        android:layout_marginBottom="85dp"
        android:orientation="horizontal"
        android:paddingStart="6dp"
        android:paddingTop="6dp"
        android:paddingEnd="6dp">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="310dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp">

            <TextView
                android:id="@+id/scoreplayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:paddingBottom="10dp"
                android:text="@string/scoreplayer"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/player1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/kertas_left"
                android:layout_width="52dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:scaleX="-1"
                android:src="@drawable/kertas" />

            <ImageView
                android:id="@+id/gunting_left"
                android:layout_width="52dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:scaleX="-1"
                android:src="@drawable/gunting" />

            <ImageView
                android:id="@+id/batu_left"
                android:layout_width="52dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:scaleX="-1"
                android:src="@drawable/batu" />
        </LinearLayout>

        <ImageView
            android:id="@+id/result"
            android:layout_width="158dp"
            android:layout_height="148dp"
            android:src="@drawable/versus" />

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="310"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp">

            <TextView
                android:id="@+id/scorecomp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:paddingBottom="10dp"
                android:text="@string/scorecomp"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/computer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/comp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/kertas_right"
                android:layout_width="52dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/kertas" />

            <ImageView
                android:id="@+id/gunting_right"
                android:layout_width="52dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/gunting" />

            <ImageView
                android:id="@+id/batu_right"
                android:layout_width="52dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/batu" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/play_again"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="@color/green"
        android:text="@string/playagain"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/newgame"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="352dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/newgame"/>

</RelativeLayout>